# NODIS

./: .env.template  .gitignore  CITATION.cff  README.md  conftest.py  pyproject.toml  requirements.txt
benchmarks/: run_diffusion.py  run_dream5.py  run_sergio.py  run_stars_comparison.py  run_synthetic.py
docs/: api.md  changelog.md  conf.py  index.md  installation.md  quickstart.md
finalisation/: ensemble_ci_coverage.csv
jobs/: aggregate.job  cleanup_array.job  diffusion_array.job  diffusion_n1026p328.job  dream5.job  dream5_piglasso_prior.job  ensemble_ci_coverage.job  gglasso_dream5_p1000.job  mcc_replication.job  mcc_vs_n.job  nodis_burns.job  piglasso_diff_all_deltas.job  piglasso_diff_n1026p328.job  piglasso_n1026p328.job  piglasso_n1026p328_adaptive.job  piglasso_oracle_diffusion.job  piglasso_oracle_n02_small_configs.job  piglasso_oracle_sweep.job  piglasso_prior_synthetic.job  piglasso_synth_n513p164_missing.job  piglasso_synthetic.job  sergio.job  sergio_gglasso_piglasso.job  ssglasso_diffusion.job  stars_comparison_array.job  synthetic_array.job  synthetic_n1026p328.job
nodis/: __init__.py  cli.py
nodis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: RESULTS.md  metrics_summary.csv
scripts/: _load_env.sh  build_dream5_prior.py  dream5_partial_corr_coverage.py  dream5_pcorr_coverage.csv  il10_knockout_gif.py  kiaa1257_knockout_gif.py  plot_benchmark_comparison.py  plot_burns_network.py  plot_diffusion.py  plot_mcc_synthetic_comparison.py  plot_mcc_vs_n.py  plot_oracle_sensitivity.py  plot_style.py  (+7 more)
(+9306 files in other folders)
